WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226447
REGRESSION (
r258118
): SVG paths that contain a single move command incorrect client bounding rects
https://bugs.webkit.org/show_bug.cgi?id=226447
Summary
REGRESSION (r258118): SVG paths that contain a single move command incorrect ...
Wenson Hsieh
Reported
2021-05-30 19:45:54 PDT
rdar://72112744
Attachments
Patch
(4.46 KB, patch)
2021-05-30 20:01 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Minor style tweak
(4.46 KB, patch)
2021-05-30 20:14 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-05-30 20:01:53 PDT
Comment hidden (obsolete)
Created
attachment 430167
[details]
Patch
Wenson Hsieh
Comment 2
2021-05-30 20:14:33 PDT
Created
attachment 430168
[details]
Minor style tweak
EWS
Comment 3
2021-05-30 23:39:56 PDT
Committed
r278271
(
238308@main
): <
https://commits.webkit.org/238308@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430168
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug